.nais/dev-db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sp-vilkarsproving-db-policy
  namespace: tbd
spec:
  egress:
    - to:
        - ipBlock:
            # Ip-adressen finner du ved å se på `Public IP address` i Google Cloud Console
            cidr: 34.88.109.152/32
  podSelector:
    matchLabels:
      dbPolicyUser: sp-vilkarsproving-opprydding-dev
  policyTypes:
    - Egress
